backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /api/evaluations
          pathType: Prefix
          backend:
            service:
              name: evaluations
              port:
                number: 8081
        - path: /api/issues
          pathType: Prefix
          backend:
            service:
              name: issues
              port:
                number: 8082
